--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Portfolio Project</title>
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src="https://i.pinimg.com/564x/af/f1/28/aff128795f3de001b4cef283e555eed4.jpg" alt="smiling woman using a laptop">
+        </div>
+    </header>
     
 </body>
 </html>
