add header and navigation bars

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <div class="logo">
             <img src="https://i.pinimg.com/564x/af/f1/28/aff128795f3de001b4cef283e555eed4.jpg" alt="smiling woman using a laptop">
         </div>
+        <button class="nav-toggle" aria-label="toggle navigation"></button>
+        <nav class="nav">
+            <ul class="new__list">
+                <li class="nav__item"><a href="" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="" class="nav__link">About Me</a></li>
+                <li class="nav__item"><a href="" class="nav__link">My Projects</a></li>
+            </ul>
+        </nav>
     </header>
     
 </body>
