add section and header

--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
         <button class="nav-toggle" aria-label="toggle navigation"></button>
         <nav class="nav">
             <ul class="new__list">
-                <li class="nav__item"><a href="" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="home" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="" class="nav__link">About Me</a></li>
                 <li class="nav__item"><a href="" class="nav__link">My Projects</a></li>
             </ul>
         </nav>
     </header>
+    <section class="intro" id="home">
+        <h1 class="section__title">
+            <p><strong>Yvonne Wangui Wamburu</strong></p>
+        </h1>
+        <h2>Student, Aspiring Software Developer</h2>
+    </section>
     
 </body>
 </html>
