--- a/index.html
+++ b/index.html
@@ -15,16 +15,40 @@
         <nav class="nav">
             <ul class="new__list">
                 <li class="nav__item"><a href="home" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="" class="nav__link">About Me</a></li>
-                <li class="nav__item"><a href="" class="nav__link">My Projects</a></li>
+                <li class="nav__item"><a href="experience" class="nav__link">About Me</a></li>
+                <li class="nav__item"><a href="about" class="nav__link">My Projects</a></li>
             </ul>
         </nav>
     </header>
     <section class="intro" id="home">
         <h1 class="section__title">
-            <p><strong>Yvonne Wangui Wamburu</strong></p>
+            <div class="container">
+                <p><strong>Yvonne Wangui Wamburu</strong></p>
         </h1>
         <h2>Student, Aspiring Software Developer</h2>
+             </div>
+    </section>
+    <section class="my-experience" id="experience">
+        <h2>Background</h2>
+        <div class="experience">
+            <div class="experience">
+                <h3>My experience</h3>
+                <p>I have been able to acquire a few skills using Python which I learnt at a Data Science Bootcamp.<br>For the past week, I have been able to learn HTML,CSS and Git at <a href="moringaschool.com">Moringa School</a> </p>
+            </div>
+        </div>
+    </section>
+    <section class="about-me" id="about">
+        <h2>About Me</h2>
+        <div class="about-me__body">
+            <p>Bachelor of Science Student in Pure Math at the University of Nairobi <a href="www.uonbi.ac.ke">University of Nairobi.</a> <br>Currently taken an interest in Software Development which has led me to taking a Prep Course at Moringa School.</p>
+            <h4>Hobbies</h4>
+            <ul>
+                <li>I enjoy Hiking.</li>
+                <li>Running.</li>
+                <li>Reading novels with Anne Rice being one of my favorite authors.</li>
+                <li>Travelling to see various places.</li>
+            </ul>
+        </div>
     </section>
     
 </body>
