add README.md file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="https://i.pinimg.com/564x/af/f1/28/aff128795f3de001b4cef283e555eed4.jpg" alt="smiling woman using a laptop">
+            <img src="https://img.artpal.com/080321/1-19-6-23-6-52-8m.jpg" alt="smiling woman using a laptop">
         </div>
         <button class="nav-toggle" aria-label="toggle navigation"></button>
         <nav class="nav">
@@ -24,9 +24,9 @@
     <section class="intro" id="home">
         <h1 class="section__title">
             <div class="container">
-                <p><strong>Yvonne Wangui Wamburu</strong></p>
+                <h1><strong>Yvonne Wangui Wamburu</strong></h1>
         </h1>
-        <h2>Student, Aspiring Software Developer</h2>
+        <h4>Student, Aspiring Software Developer</h4>
             </div>
     </section>
     <section class="about-me" id="about">
