change layout of ul list with nav label portfolio

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <div class="logo">
             <img src="https://img.artpal.com/080321/1-19-6-23-6-52-8m.jpg" alt="smiling woman using a laptop">
         </div>
-        <button class="nav-toggle" aria-label="toggle navigation"></button>
-        <nav class="nav">
-            <ul class="new__list">
-                <li class="nav__item"><a href="home" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="about" class="nav__link">About Me</a></li>
-                <li class="nav__item"><a href="projects" class="nav__link">My Projects</a></li>
+        <nav>
+            <label class="logo">Portfolio</label>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Projects</a></li>
             </ul>
         </nav>
     </header>
@@ -35,13 +35,14 @@
             <h2>About Me</h2>
             <p>Bachelor of Science Student in Pure Math at the University of Nairobi <a href="www.uonbi.ac.ke">University of Nairobi.</a> <br>Currently taken an interest in Software Development which has led me to taking a Prep Course at Moringa School.</p>
             <h4>Hobbies</h4>
-            <ul>
+            <ol>
                 <li>I enjoy Hiking.</li>
                 <li>Running.</li>
                 <li>Reading novels with Anne Rice being one of my favorite authors.</li>
                 <li>Travelling to see various places.</li>
                 <h3>My experience</h3>
                 <p>I have been able to acquire a few skills using Python which I learnt at a Data Science Bootcamp.<br>For the past week, I have been able to learn HTML,CSS and Git at <a href="moringaschool.com">Moringa School</a> </p>
+            </ol>
         </div>
     </section>
     <section class="my-projects" id="projects">
