add image top margin, border width and float left

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="https://img.artpal.com/080321/1-19-6-23-6-52-8m.jpg" alt="smiling woman using a laptop">
-        </div>
         <nav>
             <label class="logo">Portfolio</label>
             <ul>
@@ -20,6 +17,7 @@
                 <li><a href="#">Projects</a></li>
             </ul>
         </nav>
+        <img src="https://img.artpal.com/080321/1-19-6-23-6-52-8m.jpg" alt="woman silhouette">
     </header>
     <section class="intro" id="home">
         <h1 class="section__title">
