create active class,add hover effect on nav

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <label class="logo">Portfolio</label>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a class ="active" href="#">Home</a></li>
                 <li><a href="#">About Me</a></li>
                 <li><a href="#">Projects</a></li>
             </ul>
