--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav>
             <label class="logo">Portfolio</label>
             <ul>
-                <li><a class ="active" href="#">Home</a></li>
-                <li><a href="#">About Me</a></li>
+                <li><a class ="active" href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
                 <li><a href="#">Projects</a></li>
             </ul>
         </nav>
