add file project.html

--- a/about.html
+++ b/about.html
@@ -10,10 +10,21 @@
 <body>
     <header>
         <nav>
-            <label class="logo">Portfolio</label>
             <ul>
                 <li><a class ="active" href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
             </ul>
         </nav>
+        <div class="about">
+            <h2>About Me</h2>
+            <p>Bachelor of Science Student in Pure Math at the University of Nairobi <a href="www.uonbi.ac.ke">University of Nairobi.</a> <br>Currently taken an interest in Software Development which has led me to taking a Prep Course at Moringa School.</p>
+            <h4>Hobbies</h4>
+            <p>I love hiking and partake in running activities.<br> I love reading novels with Anne Rice being my favorite author. Baking is also<br> a part-time activity for me during some weekends.</p>
+                <h3>My experience</h3>
+                <p>I have been able to acquire a few skills using Python which I learnt at a Data Science Bootcamp.<br>For the past week, I have been able to learn HTML,CSS and Git at <a href="moringaschool.com">Moringa School</a> </p>
+            </ol>
+        </div>
+    </header>
+</body>
+</html>
