--- a/projects.html
+++ b/projects.html
@@ -10,16 +10,13 @@
 <body>
     <header>
         <nav>
-            <label class="logo">Portfolio</label>
             <ul>
                 <li><a class ="active" href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
+            <a href="https://yvonnewangui.github.io/moringa-school-projects">moringa-school-projects</a>
         </nav>
-        <img src="https://img.artpal.com/080321/1-19-6-23-6-52-8m.jpg" alt="woman silhouette">
     </header>
-                <h1><strong>Yvonne Wangui Wamburu</strong></h1>
-        <h4>Student, Aspiring Software Developer</h4> 
 </body>
 </html>
