--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <label class="logo">Portfolio</label>
             <ul>
-                <li><a class ="active" href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
