add span class,change color and font-weight

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         </nav>
         <div class="about">
             <h2>About Me</h2>
-            <p>Bachelor of Science Student in Pure Math at the University of Nairobi <a href="www.uonbi.ac.ke">University of Nairobi.</a> <br>Currently taken an interest in Software Development which has led me to taking a Prep Course at Moringa School.</p>
+            <p>Bachelor of Science Student in Pure Math at the <a href="www.uonbi.ac.ke">University of Nairobi.</a> <br>Currently taken an interest in Software Development which has led me to taking a Prep Course at Moringa School.</p>
             <h4>Hobbies</h4>
             <p>I love hiking and partake in running activities.<br> I love reading novels with Anne Rice being my favorite author. Baking is also<br> a part-time activity for me during some weekends.</p>
                 <h3>My experience</h3>
