--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
                 <li><a href="projects.html">Projects</a></li>
             </ul>
         </nav>
+        <div class="smaller-image"></div>
         <img src="https://img.artpal.com/080321/1-19-6-23-6-52-8m.jpg" alt="woman silhouette">
-    </header>
                 <h1><strong>Yvonne Wangui Wamburu</strong></h1>
-        <h4>Student, Aspiring Software Developer</h4> 
+        <h4>Student, Aspiring <span class ="color">Software Developer</span></h4> 
+    </header>
 </body>
 </html>
